[project]
name = "clean_energy_statistics"
description = "Visualization of clean energy build rates per capita"
version = "0.8.0"
authors = [
  { name = "Sampo Smolander", email = "sampo.smolander@kapsi.fi" }
]
dependencies = [
  "ipykernel",
  "matplotlib",
  "pandas>=2.0",
  "openpyxl",
  "pyarrow",
  "pycountry",
  "requests",
]
